--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fdffcd;
+  background-color: #f2f9f1;
   font-family: "roboto", sans-serif;
 }
 .lunar-app {
@@ -9,4 +9,17 @@ body {
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
+}
+.search-form-input {
+  background-color: #ecfffb;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+.search-form-button {
+  background: yellow;
+  padding: 15px 20px;
+  border: none;
 }
