--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,9 @@ body {
   padding: 15px 20px;
 }
 .search-form-button {
-  background: yellow;
+  background: #2d767f;
   padding: 15px 20px;
   border: none;
+  border-radius: 6px;
+  color: white;
 }
