--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f2f9f1;
+  background-color: #ecfffb;
   font-family: "roboto", sans-serif;
 }
 .lunar-app {
@@ -10,6 +10,12 @@ body {
   border-radius: 16px;
   padding: 30px;
 }
+
+header {
+  border-bottom: 1px solid #ecfffb;
+  padding: 0 0 30px 0;
+}
+
 .search-form-input {
   background-color: #ecfffb;
   border: none;
@@ -20,8 +26,15 @@ body {
 }
 .search-form-button {
   background: #2d767f;
-  padding: 15px 20px;
+  padding: 15px 30px;
   border: none;
+  margin-left: 5px;
+  font-size: 16px;
   border-radius: 6px;
   color: white;
+}
+
+footer {
+  border-bottom: 1px solid #ecfffb;
+  padding: 0 0 30px 0;
 }
