--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@ body {
   background-color: #ecfffb;
   font-family: "roboto", sans-serif;
 }
+a {
+  color: #2d767f;
+}
+
 .lunar-app {
   background: white;
   max-width: 600px;
@@ -34,7 +38,13 @@ header {
   color: white;
 }
 
+
+
 footer {
-  border-bottom: 1px solid #ecfffb;
-  padding: 0 0 30px 0;
+  border-top: 1px solid #ecfffb;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.6);
 }
