--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,31 @@ main {
   font-size: 28px;
 }
 
+.lunar-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.lunar-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+
+.lunar-forecast-temperatures {
+  text-align: center;
+  color: #2d767f;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.lunar-forecast-temperature {
+  
+}
+
 footer {
   border-top: 1px solid #ecfffb;
   padding: 30px 0 0 0;
