--- a/src/style.css
+++ b/src/style.css
@@ -32,8 +32,8 @@ header {
   background: #2d767f;
   padding: 15px 30px;
   border: none;
-  margin-left: 5px;
   font-size: 16px;
+  margin-left: 5px;
   border-radius: 6px;
   color: white;
 }
@@ -66,15 +66,6 @@ main {
 
 .weatherlunar-container {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.weatherlunar-temperature {
-  font-size: 88px;
-  margin-left: 10px;
-  line-height: 88px;
-  font-weight: bold;
 }
 
 .weatherlunar-icon {
@@ -82,9 +73,21 @@ main {
   height: 88px;
 }
 
+.weatherlunar-temperature {
+  font-size: 88px;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
 .weatherlunar-unit {
   margin-top: 6px;
   font-size: 28px;
+}
+
+.lunar-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
 }
 
 .lunar-forecast-date {
@@ -109,7 +112,7 @@ main {
 }
 
 .lunar-forecast-temperature {
-  
+  padding: 0 10px;
 }
 
 footer {
