update api and formatday

--- a/src/style.css
+++ b/src/style.css
@@ -99,8 +99,10 @@ main {
 }
 
 .lunar-forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: auto;
 }
 
 .lunar-forecast-temperatures {
