--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,15 @@
 body {
-  background-color: #ecfffb;
+  background: radial-gradient(
+    circle at 7.5% 24%,
+    rgb(237, 161, 193) 0%,
+    rgb(250, 178, 172) 25.5%,
+    rgb(190, 228, 210) 62.3%,
+    rgb(215, 248, 247) 93.8%
+  );
   font-family: "roboto", sans-serif;
+  margin: 0;
+  height: 100vh;
+  overflow-x: hidden;
 }
 a {
   color: #2d767f;
